--- a/Thesis-proposal.tex
+++ b/Thesis-proposal.tex
@@ -94,7 +94,7 @@
 
 \chapter{Motivation}
 
-Radio position determination of flying objects is standard radiolocation discipline which led to the development of RADAR systems. At present, the RADAR systems are mature enough to detect almost any type of radio-reflective artificial flying object in the atmosphere or near space. \cite{Radar_basics} Therefore the technology development is moving from the focus on RADAR sensitivity to system stability, reliability, and low operation costs leaving no much space for scientific research. However, resulting applied technologies leads to new scientific possibilities of observations and measurement techniques which could bring new discoveries \cite{LOFAR}. Unfortunately,  due to a need of extraordinary parameters for scientific measurement, an experiment-specific radar system is usually required. 
+Radio position determination of flying objects is standard radiolocation discipline which historically led to the development of radar systems. At present, the radar systems are mature enough to detect almost any type of radio-reflective artificial flying object in the atmosphere or near space. \cite{Radar_basics} Therefore the technology development is moving from the focus on radar sensitivity to system stability, reliability, and low operation costs leaving no much space for scientific research. However, resulting applied technologies leads to new scientific possibilities of observations and measurement techniques which could bring new discoveries \cite{LOFAR}. Unfortunately,  due to a need of extraordinary parameters for scientific measurement, an experiment-specific radar system is usually required. 
 
 \section{Flying object parameters}
 
@@ -112,10 +112,10 @@ Meteors were selected primarily as the core testing phenomenon because they have
 
 The oldest known radio method is a backscatter radar. It is an ordinary type of radar which expects meteor trails to be reflective targets. Currently, several radars of this type are in operation to study meteors i. e.  SkiYMet\cite{skiymet}, CMOR \cite{CMOR_radar}.
 
-However, all of above mentioned monostatic or bistatic backscatter radars have very small detection coverage, usually limited to the radar antenna field of view. Therefore this radar types observe only several spatially limited areas of the Earth's atmosphere. But the benefits of using this method are obvious - radio meteor detection capability is not dependent on the current weather and can work even during the daylight or nights with full Moon \cite{daylight_shover}.
+However, all of above mentioned monostatic or bistatic backscatter radars have little detection coverage, usually limited to the radar antenna field of view. Therefore this radar types observe only several spatially limited areas of the Earth's atmosphere. However, the benefits of using this method are obvious - radio meteor detection capability is not dependent on the current weather and can work even during the daylight or nights with full Moon \cite{daylight_shover}.
 
 Besides the above-mentioned scientific radar systems a multistatic radio meteor detection networks have evolved \cite{BRAMS}.
-These forward scattering multistatic systems have great advantage of a large detection coverage. Unfortunately, the current spread of this technology is not sufficient to entirely cover the meteor flux of the Earth's atmosphere.
+These forward scattering multistatic systems have a great advantage of a significant detection coverage. Unfortunately, the current spread of this technology is not sufficient to entirely cover the meteor flux of the Earth's atmosphere.
 
 The general principle of meteor observing by the forward scattering of radio waves off their trails illustrating the figure \ref{fig:forward_scattering}. A radio receiver with operating frequency range of 30-200MHz located at the proper distance (about 500-2000 km) from a transmitter. A curvature of the Earth or terrain features over this distance ensures there is no possibility of direct radio wave contact. When a meteoroid enters the atmosphere, its meteor trail may reflect the radio waves emitted by the transmitter to the receiver. The signal can be received until the ionized meteor trail recombines. Reflections can last from tenths of a second to a few minutes, depending on used radio frequency and ionization intensity. The received signal characteristics are directly related to physical parameters of the meteoric event \cite{forward_scatter}.
 
@@ -131,17 +131,16 @@ The general principle of meteor observing by the forward scattering of radio wav
 
 If we want to estimate target position by radio signal reflected or transmitted by the target, we have only a small number of signal features which we could use to obtain information about target coordinates. The best method used for determination of target position depends on target type,  the precision of measurement required and intended application. In most cases for an unknown flying object, we need to implement and combine several of following general methods. 
 
-\subsection{Triangulation}
+\subsection{Direction finding}
 
-Radio direction finding is the oldest radio localization method.  It uses receiver system sensitive to the angular orientation of the incoming signal.  The target is localized by 
+Radio direction finding is the oldest radio localization method.  It uses receiver system sensitive to the angular orientation of the incoming signal.  The target is then localized by combining angular information from multiple receivers.  The direction sensitivity of a system was historically achieved by using a directional antenna, nowadays the system usually uses antenna arrays consisting antenna elements with a semi-omnidirectional radiating pattern, but angular information combining process is still based on triangulation. 
 
 \subsection{Distance measurement}
-
+Localizing a target by radio distance measurement usually, consist use of time-variable radio signal, rarely a signal attenuation model.  The target position is obtained by combining measured distances between target and receiver using geometrical trilateration or multilateration. The general limiting factor of this method is the requirement of time-space variance of the radio signal which could not be achieved in every case. 
 
 \subsection{Velocity measurement}
 
-
-The key principle is bistatic Doppler shift described by equation \ref{bistatic_doppler}. 
+The key principle is bistatic Doppler shift described by equation \ref{bistatic_doppler}. The method is based on the fact that multiple receivers receiving the same signal reflected or generated by the same target have seen different Doppler shifted signal depending on velocity vector of the target.  
 
 \begin{equation}
 f = \frac{1}{\lambda} \frac{d}{dt} \left( R_{tx} + R_{rx} \right)
@@ -156,11 +155,12 @@ Where
 \item $R_{rx}$ - Distance between receiver and target.
 \end{itemize}
 
+This method can localize only moving targets, but it is especially suitable for fast airspace targets which could not stop a movement due to physical laws restrictions. 
+
 \chapter{Meteor trajectory determination}
 
-Every radio illuminated meteor trajectory in the atmosphere create its Doppler shift reflection footprint.  This process could be described by a numerical model of Doppler shifts for points at the trajectory. For simplicity, the presented model expects constant velocity along a straight line of the meteor path which is divided into equidistant time samples. A numerical difference of path distances between transmitter, meteor and receiver is calculated. Then velocity and Doppler shift value are obtained for every point of the trajectory. 
-The resulting figure of Doppler shifts calculated along the model meteor path visible to every existing station is shown in figure \ref{fig:dopplers}. 
-
+Every radio illuminated meteor trajectory in the atmosphere create its Doppler shift reflection footprint.  This process could be described by a numerical model of Doppler shifts for points at the trajectory. For simplicity, the tested model expects constant velocity along a straight line of the meteor path which is divided into equidistant time samples. A numerical difference of path distances between transmitter, meteor, and receiver are computed, then velocity and Doppler shift value are obtained for every point of the trajectory. 
+The resulting figure of Doppler shifts calculated along the model meteor path radio-detectable on every existing station is shown in figure \ref{fig:dopplers}. 
 
 \begin{figure*}
  \begin{center}
@@ -171,14 +171,13 @@ The resulting figure of Doppler shifts calculated along the model meteor path vi
 \end{figure*}
 
 
-This signal model can be easily confirmed from meteor database where several meteor events are detected on multiple stations. If we plot such meteor event in time aligned spectrogram we obtain an image similar to the figure \ref{fig:meteor_reflections}.
-Precise meteor trajectory estimation methods are intensively investigated at the moment.  One of the difficulties is a suboptimal geometry situation and low inter-station events correlation. Therefore expanding of the network is another task which runs in parallel. 
-
+This signal model can be partially confirmed from Bolidozor meteor database where several meteor events However, on multiple stations. If we plot such meteor event in time aligned spectrogram, we obtain an image similar to the figure \ref{fig:meteor_reflections}.
+Precise meteor trajectory estimation methods are investigated at the moment.  One of the difficulties is a possible suboptimal geometry configuration and low inter-station events correlation.
 
 \section{GRAVES based detection system}
 
-Bolidozor uses multistatic forward scattering approach which allows an efficient use of the radar transmitter energy  to maximize the information value collected from the meteor reflection.
-The network currently uses GRAVES \cite{GRAVES_radar} transmitter located in France, which transmits a CW (continuous wave) signal at a frequency of 143.05 MHz. A radiation of the transmitter is directed mainly to the south hemisphere, but due to the imperfections of its antenna system, the signal from meteor reflections can be observed in almost all European countries. Therefore the transmitter is suitable for receivers' network operations with the aim of meteor trail detection and the development of algorithms for the calculation of meteor trajectory.
+Bolidozor uses multistatic forward scattering approach which allows an efficient use of the radar transmitter energy to maximize the information value collected from the meteor reflection.
+The network currently uses GRAVES \cite{GRAVES_radar} transmitter located in France, which transmits a continuous wave (CW) signal at a frequency of 143.05 MHz. A radiation of the transmitter is directed mainly to the south hemisphere, but due to the imperfections of its antenna system, the signal from meteor reflections can be observed in almost all European countries. Therefore the transmitter is suitable for receivers' network operations with the aim of meteor trail detection and the development of algorithms for the calculation of meteor trajectory. Unfortunately, use of a distance measurement method is not possible because the transmitter signal is only partially modulated in space by steering the transmit azimuth in several discrete sectors, but exact method and timing of steering radar beam is out of our control. 
 
 \begin{figure}
  \begin{center}
@@ -188,15 +187,15 @@ The network currently uses GRAVES \cite{GRAVES_radar} transmitter located in Fra
  \end{center}
 \end{figure}
                    
-The use of such high frequency beacon has one main advantage over the previous experiments.
-Previous attempts used longer wavelengths in frequency range 20-50 MHz. Such long wavelengths were used to obtain a higher sensitivity to finer meteor trails. According to a simplified formula (\ref{equ:decay}), where $T$ is exponential time constant and $D$ is ambipolar diffusion coefficient and $\lambda$ is wavelength \cite{Decay_time}, we have longer meteor echos from meteors with the same ionisation energy observed by longer wavelengths compared to meteor reflections observed by shorter wavelengths. But shorter wavelengths allow us to detect finer details of meteor trails.
+The use of such high-frequency beacon has one main advantage over the previous meteor detection experiments.
+Previous attempts used longer radio wavelengths in frequency range 20-50 MHz. Such long wavelengths were used to obtain a higher sensitivity to finer meteor trails. According to a simplified formula (\ref{equ:decay}), where $T$ is the exponential time constant and $D$ is ambipolar diffusion coefficient and $\lambda$ is wavelength \cite{Decay_time}. We conclude that we have longer meteor from meteors echoes in comparison with the meteor of the same ionization energy observed at longer wavelengths compared to meteor reflections observed by shorter wavelengths. However, shorter wavelengths allow us to detect finer details of meteor trails.
 
 \begin{equation}
 T = \frac{\lambda^2}{16 \pi ^2 D}
 \label{equ:decay}
 \end{equation}
 
-The head echo of meteor is usually called as overdense due to its relatively high plasma frequency compared to used observation frequency ($F_{obs}$) in the front of the meteoroid shock wave that is created in the air. This condition is expressed by the equation (\ref{equ:plasma_frequency}). However, if we use a frequency near to the plasma frequency ($f_{pe}$) of the meteor trail we can distinguish the head echo and meteor trail reflection because the Doppler shift is applied on the part of reflected signal. This situation is shown in the figure \ref{fig:meteor_reflections} where head echoes are marked by sloped dotted lines. Static meteor trail reflections are marked by straight vertical lines.
+The head echo of a meteor is usually called as overdense due to its relatively high plasma frequency compared to used observation frequency ($F_{obs}$) in the front of the meteoroid shock wave that is created in the air. This condition is expressed by the equation (\ref{equ:plasma_frequency}). However, if we use a frequency near to the plasma frequency ($f_{pe}$) of the meteor trail, we can distinguish the head echo and meteor trail reflection because the Doppler shift is applied on the part of reflected signal. This situation is shown in the figure \ref{fig:meteor_reflections} where head echoes are marked by sloped dotted lines. Static meteor trail reflections are indicated by straight vertical lines.
 
 \begin{figure*}
  \begin{center}
@@ -217,21 +216,21 @@ F_{obs} << f_{pe} =\frac{\sqrt{\frac{n_e e^2}{m \epsilon_0}}}{2 \pi}
 \item $\epsilon_0$ is the permittivity of vacuum.
 \end{itemize}
 
-Obviously not all parts of the meteor trail are observable from one station as the signal can be scattered to different directions non-specularly.
-But if we use multiple receiving stations, we greatly increase the statistical sensitivity because several stations could be located on the reflection spots. Therefore it is very useful to have stations in a form of cooperative detection network.
-The network of stations has many advantages over a single transmitter - single receiver configuration. For example it brings robustness which allows operability even in case that a part of the system is under a maintenance and therefore not functional.
+Obviously, not all parts of the meteor trail are observable from one station as the signal can be scattered to different directions non-specularly.
+However, if we use multiple receiving stations, we greatly increase the sensitivity, because several stations could be located in the reflection spots. Therefore it is very useful to have stations a  cooperative detection network.
+The network of stations has many advantages over a single transmitter - single receiver configuration. For example, it brings robustness which allows operability even in a case that a part of the system is under a maintenance and therefore not functional.
                    
-There also exist signal processing advantages, especially if we want to compute meteor parameters such as its velocity and trajectory from the meteor radio observation. All physical parameters we could determine from the single reflection are signal intensity and frequency shift in a given time which corresponds to an ionisation intensity and bi-static velocity.
-Therefore we must combine information about one meteor event from multiple stations to obtain points in space corresponding to the meteor trajectory. We should alight the events according to time stamps. Therefore, a precise time synchronization between stations is required. The exact required precision depends on the network geometry. But if we want to work in 300 m distance resolution, which is  typical for the current optical methods, we need the time precision on approximately the microseconds scale. Therefore, we needed to develop a high performance receiver with unique parameters, especially with a high quality of time synchronization. Tight time synchronization requirements between nodes increase the complexity of the receiver system. To simplify the development process we used MLAB open source electronic prototyping platform.
+There also exist signal processing advantages, especially if we want to compute meteor parameters such as its velocity and trajectory from the meteor radio observation. All physical parameters we could determine from the single reflection are signal intensity and frequency shift in a given time which corresponds to an ionization intensity and bi-static velocity.
+Therefore we must combine information about one meteor event from multiple stations to obtain points in space corresponding to the meteor trajectory. We should align the events according to time stamps. Therefore, a precise time synchronization between stations is required. The exact required precision depends on the network geometry. However, if we want to work in 300 m distance resolution, which is typical for the current optical methods, we need the time precision on approximately the microseconds scale. Therefore, we needed to develop a high-performance receiver with unusual parameters, in particular with a high quality of time synchronization. Tight time synchronization requirements between nodes increase the complexity of the receiver system. To simplify the development process we used MLAB open source electronic prototyping platform.
 
-As a result a new type of radio meteor detection system is being build, based on a new idea of distributed scientific measurement systems. At the moment Bolidozor network produces large volume of valuable radioastronomy data ready for further processing.  
-We currently have a large database of multi-station meteor reflections. Unfortunately, we have yet not reached suitable network geometry to obtain meteor position and trajectory by the known methods \cite{Doppler_method}. 
-To overcome this issue, the further evolution of Bolidozor network should be focused on the research of the new trajectory estimation algorithms. We are also working on the network extension with the aim of extension of the service area as well as increasing the stations density. 
-
+As a result, a new type of radio meteor detection system is being built, based on a new idea of distributed scientific measurement systems. At the moment Bolidozor network produces a large volume of valuable radioastronomical data ready for further processing.  
+We currently have an extensive database of multi-station meteor reflections. Unfortunately, we have yet not reached suitable network geometry to reliably obtain meteor position and trajectory by the known methods \cite{Doppler_method}. 
+To overcome missing algorithm issue, the further evolution of Bolidozor network should be focused on the research of the new trajectory estimation algorithms. We are also working on the network extension with the aim of extension of the service area as well as increasing the station's density which should decrease data noise and improve the numerical stability of algorithms. 
 
 \section{VOR Transmitters as signal sources}
+Although GRAVES military radar is high power transmitter which easily allows basic detection of meteors, it is not the optimal system for meteor localization because the transmitter is only one, measurement method cannot be spread to the whole earth, and the transmitted signal is not suitable modulated to allows useful distance measurement.  Therefore several others available transmitters are investigated, FM radio transmitters, VOR beacons. 
 
-For feasibility study of meteor detection based on VOR beacons a numerical signal model has been created. The spectrum of modeled signal is shown in figure \ref{VOR_signal}.
+For feasibility study of meteor detection based on VOR beacons, a numerical signal model has been created. The spectrum of modeled signal is shown in figure \ref{VOR_signal}.
 
 \begin{figure}
 \includegraphics[width=\textwidth]{./img/VOR_signal.png}
@@ -239,7 +238,7 @@ For feasibility study of meteor detection based on VOR beacons a numerical signa
 \label{VOR_signal}
 \end{figure}
 
-This signal is expected to be reflected from meteor ionized trail and signal reflection will be detected and extracted from the noise using the VOR signal replica. An intensity of received reflected signal was modeled by using standard radar equation \ref{Radar_equation}.
+This signal is expected to be reflected from ionized meteor trail, and signal reflection will be detected and extracted from the noise using the VOR signal replica. An intensity of received reflected signal was modeled by using standard radar equation \ref{Radar_equation}.
 
 \begin{equation}
 P_r = \frac{P_t G_t G_r \lambda^2 \sigma}{(4 \pi)^3 R_t ^2 R_r ^2 L}
@@ -258,7 +257,7 @@ Where
 \item $R_r$ — Range from the receiver to the target. 
 \end{itemize}
 
-The model generate many meteor trajectories (figure \ref{VOR_meteors} and calculate a power level at receiver for point of closest approach. The resulting power histogram is shown in figure \ref{VOR_meteors_intensity}.
+The model generates many meteor trajectories (figure \ref{VOR_meteors} and calculates a power level at receiver for point of closest approach. The resulting power histogram is shown in figure \ref{VOR_meteors_intensity}.
 
 \begin{figure}
 \includegraphics[width=\textwidth]{./img/Modeled_meteor_trajectories.png}
@@ -266,33 +265,38 @@ The model generate many meteor trajectories (figure \ref{VOR_meteors} and calcul
 \label{VOR_meteors}
 \end{figure}
 
-
 \begin{figure}
 \includegraphics[width=\textwidth]{./img/Meteor_signal_intensity.png}
 \caption{Distribution of expected signal power on receiver [dBm] on horizontal axis and meteor count on vertical axis.}
 \label{VOR_meteors_intensity}
 \end{figure}
 
-\section{Experimental detection of other objects}
+As could be seen from resulting histogram, the power of expected received signal is on the edge of radio receiver sensitivity. Therefore detection could work only on relatively small distance, and receiver system must therefore propertly handle the strong ground signal and weak reflected signal. Such desired behavior could be probably best achieved by use of an antenna with suitable direction sensitivity.
 
 \section{Hemispherical radiating pattern antenna design}
 
-A highly directional pattern antenna is usually used for radio meteor observations, but these types of antennas became impractical in cases where we have multiple transmitters spread around a reception station. In that situation the hemispherical sensitivity of  antenna is more important than directional antenna gain. We present a hemispherical radiation pattern antenna design which could be modified for almost any observational frequency reflective by meteor trail. The symmetry of radiation pattern of such antenna allows easy construction of antenna arrays which could be used for angular measurement of received signals.
+A highly directional pattern antenna is usually used for radio meteor observations, but these types of antennas became impractical in cases where we have multiple transmitters such as VOR beacons spread around a reception station. In that situation, the hemispherical sensitivity of the antenna is more valuable than peak directional antenna gain. A hemispherical radiation pattern antenna should be the best solution.  The symmetry of radiation pattern of such antenna allows easy construction of antenna arrays which could be used for angular measurement of received signals.
 
 \subsection{Patch Antenna Design }
 
-Patch antenna was initially examined due to expectation of a simple construction and manufacturing. Antenna was experimentally constructed from wire mesh with  a square grid. This grid was chosen as a compromise between antenna quality (surface conductivity)  and the possibility of icing on antenna’s wire  surfaces. Real prototype of the antenna was made according to the computer model. Unfortunately, after the antenna’s construction and verification it was found that the antenna is very sensitive to deformation of patch base element and for position of the central elevated element. Additionally, the central element must be a precise square to achieve a circular polarization. 
+Patch antenna was initially examined due to an expectation of a simple construction and easy manufacturing. The antenna was experimentally constructed from wire mesh with a square grid. This grid was chosen as a compromise between antenna quality (surface conductivity)  and the possibility of icing on antenna’s surfaces. Real prototype of the antenna was made according to the computer model. Unfortunately, after the antenna’s construction and verification, it was found that the antenna is very sensitive to deformation of patch base element and for a position of the central elevated element. Additionally, the central part must be a precise square to achieve a circular polarization. 
 
 \subsection{Short-circuited quadrifilar helix}
 
-Another antenna type was proposed to overcome the issues of the previous antenna design experiment.  Short-circuited quadrifilar helix (SC-QHA) is a variant of a well known self-phased quadrifilar helix  antenna (SP-QHA). But unlike the SP-QHA type, the  SC-QHA has narrower bandwidth which depends primarily on a bandwidth of a phasing network. Therefore the antenna could be more efficient for narrow band signals like meteor reflections.  The antenna was numerically modeled in NEC2++ software. Source code of  the model is published on github.
-Unfortunately the resulting antenna resonance was at 161.5 MHz as is shown in figure 7.
+Another antenna type was proposed to overcome the issues of the previous antenna design experiment.  Short-circuited quadrifilar helix (SC-QHA) is a variant of a well-known self-phased quadrifilar helix antenna (SP-QHA). However, unlike the SP-QHA type, the  SC-QHA has the narrower bandwidth which depends primarily on a bandwidth of a phasing network. Therefore the antenna could be more efficient for narrow band signals like meteor reflections.  The antenna was numerically modeled in NEC2++ software.
 
 \chapter{Future work}
 
-\section{Meteor signal model improvement}
+Althought some meteor trajectory estimation algorithms are developed, the real precision of estimation is unknown because it needs a comparison with other trajectory estimation method. The best candidate will be probably optical measurement performed at the event which is certainly detected by radio method and by optical observations. 
+Algorithmic complexity of meteor trajectory estimation could be likely reduced by introducing some additional information than velocity measurements.  The direction finding with using phased antenna array is the most promising candidate for improving the measurement method it is because a distance measurement is not usable for meteors due to lack of a globally available network of transmitters which allows distance measurement.  Such localization method could be used for natural phenomena which produce a wideband time limited signal such as lightning.
 
-\section{Expansion of used methods to more objects}
+\section{Expansion of used methods to other natural phenomena}
+
+The analysis mentioned above of state of the art methods and systems conclude in the result that dissertation should focus on multi-methodical detection and analysis of natural phenomena which  is already the most promising area for radio scientific research. 
+
+Already obtained experiences can be used for detection other natural phenomena like lightning strikes which could be extremely useful for work at CRREAT project which needs precise localization of atmospheric events to achieve scientific goals. 
+
+The CRREAT team will perform measurements of the atmospheric radiation and ionization events on satellites, aircraft, unmanned aerial vehicles, monitoring cars and ground stations. The CRREAT project will contribute to improvement of space weather models, air transport safety and global navigation systems reliability.
 
 
 \appendix
@@ -314,7 +318,7 @@ F. G. Schröder, Instruments and Methods for the Radio Detection of High Energy 
 \emph{DISSERTATION}, Tag der mündlichen Prüfung: 11. Februar 2011
 
 \bibitem{LOFAR}
-K. Mikhailov, J. van Leeuwen, The LOFAR search for radio pulsars and fast transients in M33, M81 & M82,Astrophysics of Galaxies, A&A 593, A21 (2016), DOI: 10.1051/0004-6361/201628348
+K. Mikhailov, J. van Leeuwen, The LOFAR search for radio pulsars and fast transients in M33, M81 and M82,Astrophysics of Galaxies, A\&A 593, A21 (2016), DOI: 10.1051/0004-6361/201628348
 
 \bibitem{LOFAR_showers}
 Radio detection of air showers with LOFAR and AERA - LOFAR key science project Cosmic Rays and Pierre Auger Collaborations (Hörandel, Jörg R. for the collaboration) JPS Conf.Proc. 9 (2016) 010004 arXiv:1509.04960 [astro-ph.HE]
