Crop of image to better fit in to the layout.

--- a/Thesis-proposal.tex
+++ b/Thesis-proposal.tex
@@ -7,7 +7,7 @@
 \documentclass[twoside]{ctuthesis}
 
 \ctusetup{
-	preprint = \ctuverlog,
+%	preprint = \ctuverlog,
 	mainlanguage = english,
 	titlelanguage = english,
 %	mainlanguage = czech,
@@ -211,7 +211,7 @@ The head echo of a meteor is usually called overdense due to its relatively high
 \begin{figure*}
  \begin{center}
  \includegraphics[width=\textwidth]{./img/Raws_analyser.png}
- \caption{Example of meteor reflections for multiple stations - Spectrograms show the time aligned signal evolution over vertical axis. (The oldest data being at the bottom) Horizontal axis corresponds to the frequency. (Highest frequency on right)}
+ \caption{Example of meteor reflections for multiple stations - Spectrograms show the time aligned signal evolution over vertical axis. (The oldest data being at the bottom) Horizontal axis corresponds to the frequency. (Highest frequency on the right)}
   \label{fig:meteor_reflections} 
  \end{center}
 \end{figure*}
