Abstract page removed.

--- a/ctuth-templates.tex
+++ b/ctuth-templates.tex
@@ -171,10 +171,10 @@
 %	\newpage
 %		\ctutemplate{twocolumn.declaration}
 %	\clearpage
-		\ctutemplate{twocolumn.abstract.in.titlelanguage}
-	\newpage
-		\ctutemplate{twocolumn.abstract.in.secondlanguage}
-	\clearpage
+%		\ctutemplate{twocolumn.abstract.in.titlelanguage}
+%	\newpage
+%		\ctutemplate{twocolumn.abstract.in.secondlanguage}
+%	\clearpage
 		\ctutemplate{twocolumn.tableofcontents}
 	% The "loft" template is included only if at least one of the lists is enabled
 	\bool_if:nTF {
