New references added.

--- a/Thesis-proposal.tex
+++ b/Thesis-proposal.tex
@@ -98,6 +98,9 @@
 
 Radio position determination of flying objects is a standard radiolocation discipline which historically led to the development of radar systems. At present, the radar systems are mature enough to detect almost any type of radio-reflective artificial flying object in the atmosphere or near space. \cite{Radar_basics} Therefore the technology development is moving from the focus on radar sensitivity to system stability, reliability, and low operation costs leaving little space for scientific research. However, resulting applied technologies lead to new scientific possibilities of observations and measurement techniques which could bring new discoveries \cite{LOFAR}. Unfortunately, due to a need for specific parameters for scientific measurement, an experiment-specific radar system is usually required. 
 
+
+
+
 \section{Flying object parameters}
 
 From a radar point of view, the terminology usually uses a term target instead of an object. The radar cross section (RCS; describing the ability to reflect radio waves), object distance and velocity are typical limiting parameters of the radar systems. These parameters vary largely depending on the measured flying target type. 
@@ -342,6 +345,13 @@ The Desert Fireball Network
 \emph{Astronomy \& Geophysics}, vol. 45, number 5. pages 5.20-5.23
 10.1046/j.1468-4004.2003.45520
 
+\bibitem{RETRAM}
+S. AZARIAN,J.J. MAINTOUX, F. RIBLE, J. MAINTOUX,
+RETRAM: A network of passive radars to detect and 
+track meteors
+978-1-4799-4195-7/14/31.002014IEEE
+
+
 \bibitem{light_pollution}
 KAC, J.,
 Meteor Observation and the Light Pollution
@@ -359,6 +369,50 @@ EDWARDS, W. N., BROWN, P. G., WERYK, R. J., et. al.
 Infrasonic Observations of Meteoroids: Preliminary Results from a Coordinated Optical-radar-infrasound Observing Campaign
 \emph{Earth Moon Planet} (2008) 102:221-229
 DOI 10.1007/s11038-007-9154-6
+
+\bibitem{IMPACT_sensor}
+C.T. Mata, J.G. Wilson,
+FUTURE EXPANSION OF THE LIGHTNING SURVEILLANCE SYSTEM AT THE KENNEDY SPACE CENTER AND THE CAPE CANAVERAL AIR FORCE STATION, FLORIDA, USA  
+\emph{22nd International Lighting Detection conference} (2012) 
+
+\bibitem{LOFAR_lightning}
+O. Scholten, Ad van den Berg,
+Lightning Research project (https://www.kvi.nl/~scholten/Lightning/KVI-ProjectDescription-crackling-v1.pdf)
+\emph{KVI - Center for Advanced Radiation Technology, University of Groningen.} (KVI-CART) 
+
+\bibitem{LOFAR_lightning2}
+O.Scholten, S. Buitink,R. Dina, et. al.
+Lightning Imaging with LOFAR
+\emph{ARENA 2016} (DOI: 10.1051/epjconf/201713503003) 
+
+\bibitem{NALMA_algorithms}
+W. J. KOSHAK, R. J. SOLAKIEWICZ,R. J. BLAKESLEE, et. al.
+North Alabama Lightning Mapping Array (LMA): VHF Source Retrieval Algorithm
+and Error Analyses
+\emph{JOURNAL OF ATMOSPHERIC AND OCEANIC TECHNOLOGY} (VOLUME 21) 
+
+\bibitem{rocket_triggered}
+J. D. Hill, J. Pilkey,M. A. Uman, et. al.
+Correlated lightning mapping array and radar observations of the initial stages of three sequentially triggered Florida lightning discharges
+\emph{JOURNAL OF GEOPHYSICAL RESEARCH: ATMOSPHERES} (, VOL. 118, 8460–8481, doi:10.1002/jgrd.50660, 2013) 
+
+\bibitem{NMLMA}
+Rison, W., R.J. Thomas, P.R. Krehbiel, T. Hamlin, and J. Harlin, A GPS-based Three-Dimensional Lightning Mapping System: Initial Observations in Central New Mexico
+\emph{Geophysical Research Letters, 26, 3573-3576, 1999}
+
+
+
+\bibitem{4DLSS}
+William P. Roeder, Jon M. Saul,
+Four Dimensional Lightning Surveillance System:  Status and Plans  
+\emph{22nd International Lighting Detection conference} (2012)
+
+\bibitem{Lighting_locating}
+Kenneth L. Cummins, Martin J. Murphy,
+An Overview of Lightning Locating Systems: History, Techniques, and Uses, With an In-depth Look at 
+the U.S. NLDN \emph{IEEE Transaction on Electromagnetic Compat
+ibility} (4/15/2009)
+
 
 \bibitem{CMOR_radar}
 WEBSTER, A. R., BROWN, P. G., JONES, J., et. al.
